syntax = "proto2";

package cloud.deps.des.api;

option go_package = "api";

message Dependency {
    optional string organization = 1;
    optional string module = 2;
    optional string versionConstraint = 3;
    repeated string scopes = 4;
}

message DependencyManagementFile {
    optional string language = 1; // java, node, python, golang
    optional string system = 2; // npm, ivy, maven, gradle, godeps

    optional string organization = 5;
    optional string module = 6;
    optional string version = 7;
    repeated Dependency dependencies = 8;
}
