syntax = "proto3";

package mjpitz.des.api;

import "deps.proto";

option go_package = "api";

message ExtractRequest {
    string separator = 1;
    map<string, string> file_contents = 2;
}

message ExtractResponse {
    repeated mjpitz.des.api.DependencyManagementFile managementFiles = 1;
}

message MatchRequest {
    string separator = 1;
    repeated string paths = 2;
}

message MatchResponse {
    repeated string matchedPaths = 1;
}

service DependencyExtractor {
    rpc Match(MatchRequest) returns (MatchResponse);

    rpc Extract(ExtractRequest) returns (ExtractResponse);
}
